// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render as an anchor with href prop 1`] = `
<DocumentFragment>
  .cache-arcw4t-link-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-arcw4t-link-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-arcw4t-link-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-arcw4t-link-StyledFilledButton:hover,
.cache-arcw4t-link-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

<a
    class="cache-arcw4t-link-StyledFilledButton e112qvla3"
    href="http://scaleway.com"
    type="button"
  >
    Scaleway
  </a>
</DocumentFragment>
`;

exports[`Button render large 1`] = `
<DocumentFragment>
  .cache-729c39-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-729c39-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-729c39-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-729c39-StyledFilledButton:hover,
.cache-729c39-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

<button
    class="cache-729c39-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render medium 1`] = `
<DocumentFragment>
  .cache-1wvru4m-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-1wvru4m-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1wvru4m-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1wvru4m-StyledFilledButton:hover,
.cache-1wvru4m-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

<button
    class="cache-1wvru4m-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render small 1`] = `
<DocumentFragment>
  .cache-bs86k5-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-bs86k5-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bs86k5-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-bs86k5-StyledFilledButton:hover,
.cache-bs86k5-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

<button
    class="cache-bs86k5-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with a tooltip 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-729c39-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-729c39-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-729c39-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-729c39-StyledFilledButton:hover,
.cache-729c39-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

<div
    aria-describedby=":r1f:"
    class="cache-yb56yg-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <button
      class="cache-729c39-StyledFilledButton e112qvla2"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button render with fullWidth 1`] = `
<DocumentFragment>
  .cache-12g0de6-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-12g0de6-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-12g0de6-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-12g0de6-StyledFilledButton:hover,
.cache-12g0de6-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

<button
    class="cache-12g0de6-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with icon 1`] = `
<DocumentFragment>
  .cache-a3ukse-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-a3ukse-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-a3ukse-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with icon on the right 1`] = `
<DocumentFragment>
  .cache-1vifyue-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-1vifyue-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-1vifyue-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with icon only 1`] = `
<DocumentFragment>
  .cache-146pjnc-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-146pjnc-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-146pjnc-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button render with isLoading with icon 1`] = `
<DocumentFragment>
  .cache-a3ukse-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-a3ukse-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-a3ukse-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-cmn72i-StyledSvg e1y1n78x1"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render with isLoading without icon 1`] = `
<DocumentFragment>
  .cache-a3ukse-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-a3ukse-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-a3ukse-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-cmn72i-StyledSvg e1y1n78x1"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button render xsmall 1`] = `
<DocumentFragment>
  .cache-1goreq3-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-1goreq3-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1goreq3-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1goreq3-StyledFilledButton:hover,
.cache-1goreq3-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

<button
    class="cache-1goreq3-StyledFilledButton e112qvla2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&danger 1`] = `
<DocumentFragment>
  .cache-128lgrb-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e51963;
  border: none;
  color: #ffffff;
  background: #ffd3e3;
  color: #ffffff;
}

.cache-128lgrb-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-128lgrb-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&danger disabled 1`] = `
<DocumentFragment>
  .cache-128lgrb-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e51963;
  border: none;
  color: #ffffff;
  background: #ffd3e3;
  color: #ffffff;
}

.cache-128lgrb-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-128lgrb-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&info 1`] = `
<DocumentFragment>
  .cache-13gll2a-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #0078d2;
  border: none;
  color: #ffffff;
  background: #bee3ff;
  color: #ffffff;
}

.cache-13gll2a-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-13gll2a-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&info disabled 1`] = `
<DocumentFragment>
  .cache-13gll2a-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #0078d2;
  border: none;
  color: #ffffff;
  background: #bee3ff;
  color: #ffffff;
}

.cache-13gll2a-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-13gll2a-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&neutral 1`] = `
<DocumentFragment>
  .cache-10izqck-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e9eaeb;
  border: none;
  color: #222638;
  background: #f3f3f4;
  color: #b5b7bd;
}

.cache-10izqck-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-10izqck-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&neutral disabled 1`] = `
<DocumentFragment>
  .cache-10izqck-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e9eaeb;
  border: none;
  color: #222638;
  background: #f3f3f4;
  color: #b5b7bd;
}

.cache-10izqck-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-10izqck-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&primary 1`] = `
<DocumentFragment>
  .cache-a3ukse-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-a3ukse-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-a3ukse-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&primary disabled 1`] = `
<DocumentFragment>
  .cache-a3ukse-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-a3ukse-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-a3ukse-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&success 1`] = `
<DocumentFragment>
  .cache-w91oos-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #45d19f;
  border: none;
  color: #222638;
  background: #adebd5;
  color: #ffffff;
}

.cache-w91oos-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-w91oos-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&success disabled 1`] = `
<DocumentFragment>
  .cache-w91oos-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #45d19f;
  border: none;
  color: #222638;
  background: #adebd5;
  color: #ffffff;
}

.cache-w91oos-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-w91oos-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&warning 1`] = `
<DocumentFragment>
  .cache-106by29-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #fbc600;
  border: none;
  color: #222638;
  background: #fff0b8;
  color: #ffffff;
}

.cache-106by29-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-106by29-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render filled&warning disabled 1`] = `
<DocumentFragment>
  .cache-106by29-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #fbc600;
  border: none;
  color: #222638;
  background: #fff0b8;
  color: #ffffff;
}

.cache-106by29-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-106by29-StyledFilledButton e112qvla2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&danger 1`] = `
<DocumentFragment>
  .cache-7ccgsj-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #b3144d;
  color: #ffd3e3;
}

.cache-7ccgsj-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-7ccgsj-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&danger disabled 1`] = `
<DocumentFragment>
  .cache-7ccgsj-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #b3144d;
  color: #ffd3e3;
}

.cache-7ccgsj-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-7ccgsj-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&info 1`] = `
<DocumentFragment>
  .cache-qices2-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #005da3;
  color: #9ad4ff;
}

.cache-qices2-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-qices2-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&info disabled 1`] = `
<DocumentFragment>
  .cache-qices2-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #005da3;
  color: #9ad4ff;
}

.cache-qices2-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-qices2-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&neutral 1`] = `
<DocumentFragment>
  .cache-17rkrny-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #464959;
  color: #b5b7bd;
}

.cache-17rkrny-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-17rkrny-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&neutral disabled 1`] = `
<DocumentFragment>
  .cache-17rkrny-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #464959;
  color: #b5b7bd;
}

.cache-17rkrny-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-17rkrny-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&primary 1`] = `
<DocumentFragment>
  .cache-1uihm2t-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  color: #d8c5fc;
}

.cache-1uihm2t-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1uihm2t-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&primary disabled 1`] = `
<DocumentFragment>
  .cache-1uihm2t-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  color: #d8c5fc;
}

.cache-1uihm2t-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1uihm2t-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&success 1`] = `
<DocumentFragment>
  .cache-1l4tayy-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #22674e;
  color: #7ee0bc;
}

.cache-1l4tayy-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1l4tayy-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&success disabled 1`] = `
<DocumentFragment>
  .cache-1l4tayy-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #22674e;
  color: #7ee0bc;
}

.cache-1l4tayy-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1l4tayy-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&warning 1`] = `
<DocumentFragment>
  .cache-1rzo73-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #7c5400;
  color: #ffdd5f;
}

.cache-1rzo73-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1rzo73-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render ghost&warning disabled 1`] = `
<DocumentFragment>
  .cache-1rzo73-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #7c5400;
  color: #ffdd5f;
}

.cache-1rzo73-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1rzo73-StyledGhostButton e112qvla0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&danger 1`] = `
<DocumentFragment>
  .cache-w3n5y-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b3144d;
  color: #b3144d;
  color: #ffd3e3;
  border: 1px solid #ffbbd3;
}

.cache-w3n5y-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-w3n5y-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&danger disabled 1`] = `
<DocumentFragment>
  .cache-w3n5y-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b3144d;
  color: #b3144d;
  color: #ffd3e3;
  border: 1px solid #ffbbd3;
}

.cache-w3n5y-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-w3n5y-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&info 1`] = `
<DocumentFragment>
  .cache-76r32z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #005da3;
  color: #005da3;
  color: #9ad4ff;
  border: 1px solid #9ad4ff;
}

.cache-76r32z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-76r32z-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&info disabled 1`] = `
<DocumentFragment>
  .cache-76r32z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #005da3;
  color: #005da3;
  color: #9ad4ff;
  border: 1px solid #9ad4ff;
}

.cache-76r32z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-76r32z-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&neutral 1`] = `
<DocumentFragment>
  .cache-1tpsxlm-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.cache-1tpsxlm-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1tpsxlm-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&neutral disabled 1`] = `
<DocumentFragment>
  .cache-1tpsxlm-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.cache-1tpsxlm-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1tpsxlm-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&primary 1`] = `
<DocumentFragment>
  .cache-1cuf84p-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1cuf84p-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1cuf84p-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&primary disabled 1`] = `
<DocumentFragment>
  .cache-1cuf84p-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1cuf84p-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1cuf84p-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&success 1`] = `
<DocumentFragment>
  .cache-1uw7ge4-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #22674e;
  color: #22674e;
  color: #7ee0bc;
  border: 1px solid #7ee0bc;
}

.cache-1uw7ge4-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1uw7ge4-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&success disabled 1`] = `
<DocumentFragment>
  .cache-1uw7ge4-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #22674e;
  color: #22674e;
  color: #7ee0bc;
  border: 1px solid #7ee0bc;
}

.cache-1uw7ge4-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1uw7ge4-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&warning 1`] = `
<DocumentFragment>
  .cache-1blf572-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #7c5400;
  color: #7c5400;
  color: #ffdd5f;
  border: 1px solid #ffdd5f;
}

.cache-1blf572-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1blf572-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`Button variant-sentiment-disabled combination render outlined&warning disabled 1`] = `
<DocumentFragment>
  .cache-1blf572-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #7c5400;
  color: #7c5400;
  color: #ffdd5f;
  border: 1px solid #ffdd5f;
}

.cache-1blf572-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1blf572-StyledOutlinedButton e112qvla1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;
